@@ -1,6 +1,11 @@
 ChangeLog for PyLint
 ====================
 
+--
+    * #100707: check for boolop being used as exception class, introducing 
+      new W0711 message (patch by Tim Hatch)
+
+
 2012-07-17  --  0.25.2
     * #93591: Correctly emit warnings about clobbered variable names when an
       except handler contains a tuple of names instead of a single name.
